# image-captioning-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: image_captioning.py  inference.py  lambda_function.py  train.ipynb  train.py
src/helpers/: __init__.py  model_config.py  utils.py
tests/: test_ai.py
