[tool.poetry]
name = "ai"
version = "0.1.0"
description = "Model for generating image captions"
authors = ["Kyle1297 <kyle.griffin.1297@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
tensorflow = "^2.4.1"
Keras = "^2.4.3"
ipykernel = "^5.5.0"
nltk = "^3.5"
pandas = "^1.2.3"
tqdm = "^4.59.0"
sklearn = "^0.0"
matplotlib = "^3.3.4"
boto3 = "^1.17.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
